fix: remove faulty side-panel z-index

--- a/styles/home_style.css
+++ b/styles/home_style.css
@@ -1,5 +1,7 @@
 body {
-  font-family: gill sans, sans-serif;
+  font-family:
+    gill sans,
+    sans-serif;
   margin: 0rem;
   padding: 0rem;
   font-size: 1.1rem;
@@ -15,6 +17,7 @@ body {
   display: block;
   position: sticky;
   top: 0;
+  z-index: 100;
   background-color: rgb(73, 72, 72);
   border-bottom: 1px solid #e1e1e1;
   color: #ffffff;
@@ -125,7 +128,7 @@ body {
   padding-bottom: 400px;
   margin-left: auto;
   margin-right: auto;
-  z-index: -1;
+  /* z-index: -1; */
 }
 
 #left-sidebar {
